Fixing responsive layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,10 @@ button {
 }
 /*----LoremGenerator----*/
 .loremGenerator {
-
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 8rem;
 }
 .loremGenerator__form {
   display: flex;
@@ -42,6 +45,8 @@ button {
   margin-bottom: 6.4rem;
 }
 .loremGenerator__form input{
+  width: 5rem;
+  font-size: 1.8rem;
   border: 0;
   border-radius: 5px;
   margin-right: 2rem;
